; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ad7780.c_ad7780_set_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_ad7780.c_ad7780_set_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ad_sigma_delta = type { i32 }
%struct.ad7780_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ad_sigma_delta*, i32)* @ad7780_set_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ad7780_set_mode(%struct.ad_sigma_delta* %0, i32 %1) #0 {
  %3 = alloca %struct.ad_sigma_delta*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ad7780_state*, align 8
  %6 = alloca i32, align 4
  store %struct.ad_sigma_delta* %0, %struct.ad_sigma_delta** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.ad_sigma_delta*, %struct.ad_sigma_delta** %3, align 8
  %8 = call %struct.ad7780_state* @ad_sigma_delta_to_ad7780(%struct.ad_sigma_delta* %7)
  store %struct.ad7780_state* %8, %struct.ad7780_state** %5, align 8
  %9 = load i32, i32* %4, align 4
  switch i32 %9, label %11 [
    i32 128, label %10
    i32 129, label %10
  ]

10:                                               ; preds = %2, %2
  store i32 1, i32* %6, align 4
  br label %12

11:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %12

12:                                               ; preds = %11, %10
  %13 = load %struct.ad7780_state*, %struct.ad7780_state** %5, align 8
  %14 = getelementptr inbounds %struct.ad7780_state, %struct.ad7780_state* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @gpiod_set_value(i32 %15, i32 %16)
  ret i32 0
}

declare dso_local %struct.ad7780_state* @ad_sigma_delta_to_ad7780(%struct.ad_sigma_delta*) #1

declare dso_local i32 @gpiod_set_value(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
